完成了 composer包 和 自动生成 rsa_config 的脚本

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,10 @@
         "psr-4": {
             "mrmiao\\crypt\\": "src/"
         }
+    },
+    "scripts": {
+        "post-package-install": [
+            "mrmiao\\script\\RSAConfig::postPackageInstall"
+        ]
     }
 }
